# constraints/Hackerrank.js
@@ -1,0 +1,65 @@
+exports.getArrayManipulation = {
+    "A0": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "A1": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "A2": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "B0": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "B1": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "B2": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "K0": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "K1": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    },
+    "K2": {
+        presence: true,
+        numericality: {
+            greaterThanOrEqualTo: 1,
+            notGreaterThan: 10
+        }
+    }
+};
